Lego Editor Change Log
2013/03/?? - 0.57

2013/03/11 - 0.56
  *  <DB COMPATIBILITY BREAKAGE> Updated to the latest (and final?) version of the schema.  
		This change makes it impossible to read the Lego database created with older editors.  Must 
		export the Legos using the previously installed version, and re-import.
  *  Added missing "Drop as Units" option to Timing and Measurement for drag and drop operations. 
  *  Fixed a null pointer that could happen on drag and drop from the SCT Tree View.
  *  Tweaked the sort order of the lego to move the comment to the top.
  *  Cleaned up the the consistency of interval notation vs set notation for displays of 
  		bounds and intervals.
  *  artf227370 <DB COMPATIBILITY BREAKAGE> Updated the snomed database that is used by the editor.
  		You will need the new snomed DB - 
  		https://csfe.aceworkspace.net/sf/frs/do/downloadFile/projects.veterans_administration_project/frs.lego_editor.snomed_database_0_56_and_newer/frs4344?dl=1
  *  artf227498 Change snomed concept drop down boxes to not show the SCTID, also reworked the 
  		concept filter option to not show the ID.
  *  artf227501 Add an option to expand all nodes recursively on each node in both trees.
  *  artf227426 Added an (optional) summary view to the editor tab
  *  artf227499 Add tooltips to snomed drop downs for viewing concepts with long descriptions.
  *  artf227427 Allow snomed search by UUID and SCTID.
  *  artf227500 Allow selecting the Snomed FSN or the Snomed Preferred Synonym when displaying concepts
  		via a user preference.
  *  artf227506 Allow any combination of left panels to be shown at the same time.
  *  artf227505 Add ability to find a concept in the Taxonomy view
  *  artf227512 Make snomed concept view more compact, add a taxonomy view.
  *  artf227526 Add support for more advanced filtering - namely rel type and target filters, including
  		child of concept X filters for rel destination.

2013/03/01 - 0.55